<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/margins_text"
    android:paddingTop="@dimen/margins_text" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margins_base" >

        <ImageView
            android:id="@+id/image_hero_stats_icon_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/overviewicon_primary"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image_hero_stats_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/overviewicon_agi" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_hero_stats_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="@dimen/margins_base"
        android:text="@string/text_hero_stats_demo_label" />

    <TextView
        android:id="@+id/text_hero_stats_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/text_hero_stats_demo_value" />

</LinearLayout>