<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myview="http://schemas.android.com/apk/res/tup.dota2recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HeroDetailActivity"
    tools:ignore="NestedScrolling" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margins_base" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_hero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margins_base"
                android:adjustViewBounds="false"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart"
                android:src="@drawable/loading" />

            <TextView
                android:id="@+id/text_hero_name_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/image_hero"
                android:text="@string/hello_world"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/text_hero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_hero_name_l"
                android:layout_toRightOf="@+id/image_hero"
                android:text="@string/hello_world" />

            <TextView
                android:id="@+id/text_hero_roles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_hero_name"
                android:layout_toRightOf="@+id/image_hero"
                android:text="@string/hello_world" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:baselineAligned="false" >

            <TextView
                android:id="@+id/text_hero_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins_text"
                android:text="@string/text_division_label" />

            <TextView
                android:id="@+id/text_hero_faction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_text"
                android:text="@string/hello_world" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margins_text"
                android:text="@string/text_division_label" />

            <TextView
                android:id="@+id/text_hero_atk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_text"
                android:text="@string/hello_world" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_hero_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/text_hero_detailstats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:text="@string/hello_world" />

        <TextView
            android:id="@+id/text_hero_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:text="@string/hello_world" />

        <!-- ====出装==== -->

        <LinearLayout
            android:id="@+id/llayout_hero_itembuilds_starting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_hero_itembuilds_starting_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hero_itembuilds_starting_label"
                android:textStyle="bold" />

            <tup.dota2recipe.view.SimpleGridView
                android:id="@+id/grid_hero_itembuilds_starting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                myview:horizontalSpacing="@dimen/margins_base"
                myview:verticalSpacing="@dimen/margins_base" >
            </tup.dota2recipe.view.SimpleGridView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llayout_hero_itembuilds_early"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_hero_itembuilds_early_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hero_itembuilds_early_label"
                android:textStyle="bold" />

            <tup.dota2recipe.view.SimpleGridView
                android:id="@+id/grid_hero_itembuilds_early"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                myview:horizontalSpacing="@dimen/margins_base"
                myview:verticalSpacing="@dimen/margins_base" >
            </tup.dota2recipe.view.SimpleGridView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llayout_hero_itembuilds_core"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_hero_itembuilds_core_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hero_itembuilds_core_label"
                android:textStyle="bold" />

            <tup.dota2recipe.view.SimpleGridView
                android:id="@+id/grid_hero_itembuilds_core"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                myview:horizontalSpacing="@dimen/margins_base"
                myview:verticalSpacing="@dimen/margins_base" >
            </tup.dota2recipe.view.SimpleGridView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llayout_hero_itembuilds_luxury"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_hero_itembuilds_luxury_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hero_itembuilds_luxury_label"
                android:textStyle="bold" />

            <tup.dota2recipe.view.SimpleGridView
                android:id="@+id/grid_hero_itembuilds_luxury"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                myview:horizontalSpacing="@dimen/margins_base"
                myview:verticalSpacing="@dimen/margins_base" >
            </tup.dota2recipe.view.SimpleGridView>
        </LinearLayout>

        <!-- ====技能==== -->

        <LinearLayout
            android:id="@+id/llayout_hero_abilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins_base"
            android:baselineAligned="false"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_hero_abilities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_hero_abilities_label"
                android:textStyle="bold" />

            <tup.dota2recipe.view.SimpleListView
                android:id="@+id/list_hero_abilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </tup.dota2recipe.view.SimpleListView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>