<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myview="http://schemas.android.com/apk/res/tup.dota2recipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ItemsDetailActivity"
    tools:ignore="NestedScrolling,HardcodedText" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margins_layout" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_items"
                android:layout_width="@dimen/itemsdetail_image_width"
                android:layout_height="@dimen/itemsdetail_image_height"
                android:layout_marginRight="@dimen/margins_base"
                android:adjustViewBounds="false"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart"
                android:src="@drawable/loading" />

            <TextView
                android:id="@+id/text_items_dname_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/image_items"
                android:text="name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/text_items_dname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_items_dname_l"
                android:layout_marginTop="@dimen/margins_text"
                android:layout_toRightOf="@+id/image_items"
                android:text="name" />

            <TextView
                android:id="@+id/text_items_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_items_dname"
                android:layout_toRightOf="@+id/image_items"
                android:drawableLeft="@drawable/gold"
                android:drawablePadding="@dimen/margins_text"
                android:text="cost" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_items_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_base"
                android:baselineAligned="false" >

                <RelativeLayout
                    android:id="@+id/rlayout_items_mana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/image_items_mana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="items_mana"
                        android:src="@drawable/mana" />

                    <TextView
                        android:id="@+id/text_items_mana_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/margins_text"
                        android:layout_toRightOf="@+id/image_items_mana"
                        android:text="@string/text_items_mana_label" />

                    <TextView
                        android:id="@+id/text_items_mana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/margins_text"
                        android:layout_toRightOf="@+id/text_items_mana_label"
                        android:text="mana" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlayout_items_cd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/image_items_cd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="items_cd"
                        android:src="@drawable/cooldown" />

                    <TextView
                        android:id="@+id/text_items_cd_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/margins_text"
                        android:layout_toRightOf="@+id/image_items_cd"
                        android:text="@string/text_items_cd_label" />

                    <TextView
                        android:id="@+id/text_items_cd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margins_text"
                        android:layout_toRightOf="@+id/text_items_cd_label"
                        android:text="cd" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/text_items_attrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_base"
                android:text="attrib" />

            <TextView
                android:id="@+id/text_items_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_base"
                android:text="desc" />

            <TextView
                android:id="@+id/text_items_lore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="lore" />

            <LinearLayout
                android:id="@+id/llayout_items_components"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_base"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_items_components_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_items_components_label"
                    android:textStyle="bold" />

                <tup.dota2recipe.view.SimpleGridView
                    android:id="@+id/grid_items_components"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    myview:horizontalSpacing="@dimen/margins_base"
                    myview:verticalSpacing="@dimen/margins_base" >
                </tup.dota2recipe.view.SimpleGridView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_items_tocomponents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_base"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_items_tocomponents_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_items_tocomponents_label"
                    android:textStyle="bold" />

                <tup.dota2recipe.view.SimpleGridView
                    android:id="@+id/grid_items_tocomponents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    myview:horizontalSpacing="@dimen/margins_base"
                    myview:verticalSpacing="@dimen/margins_base" >
                </tup.dota2recipe.view.SimpleGridView>
            </LinearLayout><LinearLayout
                android:id="@+id/llayout_items_toheros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margins_base"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_items_toheros_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_items_toheros_label"
                    android:textStyle="bold" />

                <tup.dota2recipe.view.SimpleGridView
                    android:id="@+id/grid_items_toheros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    myview:horizontalSpacing="@dimen/margins_base"
                    myview:verticalSpacing="@dimen/margins_base" >
                </tup.dota2recipe.view.SimpleGridView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>